[package]
name = "vesting-contract-cli"
version = "0.1.0"
authors = ["Bonfida <contact@bonfida.com>"]
edition = "2018"

[dependencies]
solana-program = "1.10.38"
solana-client = "1.10.38"
solana-sdk = "1.10.38"
solana-clap-utils = "1.10.38"
token-vesting =  { version = "0.1.0", path="../program", features=["no-entrypoint"] }
spl-token = {version = "3.3.1", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.1.1", features = ["no-entrypoint"]}
solana-remote-wallet = "1.10.38"
uriparse = "0.6.3"
clap = "2.33.3"
chrono = "0.4.19"
iso8601-duration = { git = "https://github.com/rrichardson/iso8601-duration.git", rev = "9e01f51ea253e95e0fba5e4d7ad0c537922931e7"}
